--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "knex": "^0.20.4",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "sqlite": "^3.0.3"
   }
 }
